--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
   <!DOCTYPE html>
   <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +11,13 @@
     <link href="https://fonts.googleapis.com/css?family=Public+Sans:300i,300,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
-  
+
   <body>
     <header>
       <div class="container flex-row justify-space-between align-center py-3">
-        <h1 class="page-title text-secondary bg-dark py-2 px-3">opisjdpfi</h1>
+        <h1 class="page-title text-secondary bg-dark py-2 px-3">sdofij</h1>
         <nav class="flex-row">
-          <a class="ml-2 my-1 px-2 py-1 bg-secondary text-dark" href="https://github.com/asoldpifjpaosdifj">GitHub</a>
+          <a class="ml-2 my-1 px-2 py-1 bg-secondary text-dark" href="https://github.com/sodifjosdif">GitHub</a>
         </nav>
       </div>
     </header>
@@ -30,13 +31,13 @@
 
       
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
-            <h3 class="portfolio-item-title text-light">]oaskdjfpij</h3>
+            <h3 class="portfolio-item-title text-light">aosdifjo</h3>
             <h5 class="portfolio-languages">
               Built With:
               JavaScript, HTML, CSS, ES6, jQuery, Bootstrap, Node
             </h5>
-            <p>aosdfoasdifja</p>
-            <a href="aosdifjoai" class="btn mt-auto"><i class="fab fa-github mr-2"></i>View Project on GitHub</a>
+            <p>asdofiajsodf</p>
+            <a href="aoisadjfoi" class="btn mt-auto"><i class="fab fa-github mr-2"></i>View Project on GitHub</a>
           </div>
         
       </div>
@@ -44,7 +45,7 @@
   
     </main>
     <footer class="container text-center py-3">
-      <h3 class="text-dark">&copy; 2022 by opisjdpfi</h3>
+      <h3 class="text-dark">&copy; 2022 by sdofij</h3>
     </footer>
   </body>
   </html>
